# document-center

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  document-center.spec
common/: Makefile.am
evince/: configure.ac
evince/shell/: Makefile.am  ev-dc.c  ev-dc.h  ev-resources.c  ev-window.c  evince-ui.xml
lib/: Makefile.am  document-center-0.1.pc.in
pixmaps/: Makefile.am
src/: Makefile.am  main.c
widget/: Makefile.am  dc-view.c  dc-view.h
