CLEANFILES =

noinst_LTLIBRARIES = libdc-common.la

AM_CPPFLAGS =							\
	-I$(top_srcdir)						\
	-DCONFIGDIR=\""/etc/@PACKAGE@\""                  \
	-DPIXMAPSDIR=\""$(datadir)/pixmaps/@PACKAGE@\""		\
	-DUIDIR=\""$(datadir)/@PACKAGE@/ui\""			\
	$(COMMON_CFLAGS)					\
	$(NULL)

AM_CFLAGS = $(WARN_CFLAGS)

libdc_common_la_SOURCES = 	\
	$(NULL)

libdc_common_la_LIBADD =	\
	$(NULL)
